--- a/Shakuras.vcxproj.filters
+++ b/Shakuras.vcxproj.filters
@@ -24,6 +24,15 @@
     <ClInclude Include="targetver.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="UtilityAndMath.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="GsTransformer.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="GsPrimitive.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
