--- a/Shakuras.vcxproj
+++ b/Shakuras.vcxproj
@@ -145,6 +145,9 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="GsPrimitive.h" />
+    <ClInclude Include="UtilityAndMath.h" />
+    <ClInclude Include="GsTransformer.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
