--- a/Shakuras.vcxproj
+++ b/Shakuras.vcxproj
@@ -145,19 +145,21 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="GsDevice.h" />
+    <ClInclude Include="GsRasterizer.h" />
     <ClInclude Include="GsPrimitive.h" />
     <ClInclude Include="GsResource.h" />
     <ClInclude Include="GsTexture.h" />
     <ClInclude Include="GsViewer.h" />
-    <ClInclude Include="UtilityAndMath.h" />
+    <ClInclude Include="Utility.h" />
+    <ClInclude Include="MathAndGeometry.h" />
     <ClInclude Include="GsTransformer.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="GsDevice.cpp" />
+    <ClCompile Include="GsRasterizer.cpp" />
     <ClCompile Include="GsResource.cpp" />
+    <ClCompile Include="GsTransformer.cpp" />
     <ClCompile Include="GsViewer.cpp" />
     <ClCompile Include="Shakuras.cpp" />
     <ClCompile Include="stdafx.cpp">
@@ -166,6 +168,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Utility.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
