--- a/Shakuras.vcxproj
+++ b/Shakuras.vcxproj
@@ -157,21 +157,27 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="GsRasterizer.h" />
+    <ClInclude Include="GsApplicationStage.h" />
+    <ClInclude Include="GsDrawable.h" />
+    <ClInclude Include="GsGeometryStage.h" />
+    <ClInclude Include="GsRenderer.h" />
+    <ClInclude Include="GsRasterizerStage.h" />
     <ClInclude Include="GsPrimitive.h" />
     <ClInclude Include="GsResource.h" />
+    <ClInclude Include="GsState.h" />
     <ClInclude Include="GsTexture.h" />
     <ClInclude Include="GsViewer.h" />
     <ClInclude Include="Utility.h" />
     <ClInclude Include="MathAndGeometry.h" />
-    <ClInclude Include="GsTransformer.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="GsRasterizer.cpp" />
+    <ClCompile Include="GsApplicationStage.cpp" />
+    <ClCompile Include="GsGeometryStage.cpp" />
+    <ClCompile Include="GsRasterizerStage.cpp" />
+    <ClCompile Include="GsRenderer.cpp" />
     <ClCompile Include="GsResource.cpp" />
-    <ClCompile Include="GsTransformer.cpp" />
     <ClCompile Include="GsViewer.cpp" />
     <ClCompile Include="Shakuras.cpp" />
     <ClCompile Include="stdafx.cpp">
