--- a/Shakuras.vcxproj.filters
+++ b/Shakuras.vcxproj.filters
@@ -24,9 +24,6 @@
     <ClInclude Include="targetver.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="GsPrimitive.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
     <ClInclude Include="GsViewer.h">
       <Filter>头文件</Filter>
     </ClInclude>
@@ -52,6 +49,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="GsPipeline.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="GsVertex.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
