--- a/Shakuras.vcxproj.filters
+++ b/Shakuras.vcxproj.filters
@@ -54,6 +54,12 @@
     <ClInclude Include="GsVertexFragment.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="stb_image.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="GsFragmentBuffer.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
