--- a/Shakuras.vcxproj
+++ b/Shakuras.vcxproj
@@ -237,6 +237,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GsApplicationStage.h" />
+    <ClInclude Include="GsFragmentBuffer.h" />
     <ClInclude Include="GsGeometryStage.h" />
     <ClInclude Include="GsPipeline.h" />
     <ClInclude Include="GsRasterizerStage.h" />
@@ -244,6 +245,7 @@
     <ClInclude Include="GsResource.h" />
     <ClInclude Include="GsTexture.h" />
     <ClInclude Include="GsViewer.h" />
+    <ClInclude Include="stb_image.h" />
     <ClInclude Include="Utility.h" />
     <ClInclude Include="MathAndGeometry.h" />
     <ClInclude Include="stdafx.h" />
