--- a/Shakuras.vcxproj
+++ b/Shakuras.vcxproj
@@ -237,10 +237,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GsApplicationStage.h" />
-    <ClInclude Include="GsFragmentBuffer.h" />
     <ClInclude Include="GsGeometryStage.h" />
     <ClInclude Include="GsPipeline.h" />
     <ClInclude Include="GsRasterizerStage.h" />
+    <ClInclude Include="GsShader.h" />
     <ClInclude Include="GsVertexFragment.h" />
     <ClInclude Include="GsResource.h" />
     <ClInclude Include="GsTexture.h" />
